# sediment-benchmark

./: .gitignore  README.md  grid_search.py  pyproject.toml  report.py  run.py
adapters/: base.py  chromadb_baseline.py  letta_adapter.py  mem0_adapter.py  sediment.py
dataset/: generate_dataset.py  memories.jsonl  queries.jsonl  temporal.jsonl
metrics/: dedup.py  latency.py  retrieval.py  temporal.py
results/: data.json  report.md
tests/: test_chromadb_adapter.py  test_dedup_metrics.py  test_latency_metrics.py  test_letta_adapter.py  test_mem0_adapter.py  test_retrieval_metrics.py  test_sediment_adapter.py  test_temporal_metrics.py
